0x07-python-test_driven_development/tests/3-say_my_name.txt
The ``3-say_my_name`` module
=============================

Using ``say_my_name``
---------------------

First import ``say_my_name`` from the ``3-say_my_name`` module:
	
	>>> say_my_name = __import__("3-say_my_name").say_my_name

Now use it:

	>>> say_my_name("", "Balcazar")
	My name is  Balcazar
	
	>>> say_my_name(None, "White")
	Traceback (most recent call last):
	...
	TypeError: first_name must be a string

	>>> say_my_name(1, "White")
	Traceback (most recent call last):
	...
	TypeError: first_name must be a string

	>>> say_my_name(("Walter", "White"), "White")
	Traceback (most recent call last):
	...
	TypeError: first_name must be a string

	>>> say_my_name()
	Traceback (most recent call last):
	...
	TypeError: say_my_name() missing 1 required positional argument: 'first_name'

	>>> say_my_name("fulano", "de", "tal")
	Traceback (most recent call last):
	...
	TypeError: say_my_name() takes from 1 to 2 positional arguments but 3 were given

	>>> say_my_name( , "White")
	Traceback (most recent call last):
		...
		say_my_name( , "White")
		     ^
	SyntaxError: invalid syntax

	>>> say_my_name("Walter", 23)
	Traceback (most recent call last):
	...
	TypeError: last_name must be a string
